[package]
name = "fe2o3-prism"
version = "0.1.2"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "TUI RGB color picker with FG/BG slots, HSV/RGB sliders, live sample text, WCAG contrast. Member of the Fe2O3 suite."
license = "Unlicense"
repository = "https://github.com/isene/prism"
readme = "README.md"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
